# amazing-mspr

./: .env.template  .gitignore  Dockerfile  Dockerfile.clustering  Dockerfile.transformation  LICENSE  README.md  data.ipynb  pyproject.toml  requirements.txt
.github/workflows/: cron-jobs.yml
conf/base/: catalog.yml  parameters_data_processing.yml
notebooks/: data.ipynb
src/: Clustering.ipynb  Data_transformation.ipynb  __init__.py  data.ipynb
src/amazing_mspr/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/amazing_mspr/extras/: partial_csv_dataset.py
src/amazing_mspr/pipelines/data_processing/: nodes.py  pipeline.py
src/amazing_mspr/pipelines/data_science/: nodes.py  pipeline.py
